--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
           <div class="card-body">
             <h1 class="card-title" id="card3"><br><br><br><br>SERVICES</h1><br>
             <h3 class="card-text" >If you want to know more about me</h3><br><br><br>
-            <a href="/services" class="btn btn-outline-danger" >Click here to learn more</a>
+            <a href="/services" class="btn btn-outline-danger" >Click here to see</a>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
           <div class="card-body">
             <h1 class="card-title"  id="card4"><br><br><br><br>CONTACT</h1><br>
             <h3 class="card-text" >If you want to know more about me</h3><br><br><br>
-            <a href="/contact" class="btn btn-outline-warning">Click here to learn more</a>
+            <a href="/contact" class="btn btn-outline-warning">Click here to contact me</a>
           </div>
         </div>
       </div>
