--- a/views/services.ejs
+++ b/views/services.ejs
@@ -12,7 +12,7 @@
             <div class="card-body">
               <h1 class="card-title"><br><br><br><img src="/Assets/images/software.png" alt="software"></h1><br>
               <h1 class="card-text" id="lgreen">Software Development</h1>
-              <h4 class="card-text" id="green">Python, C, C++, Java</h4>
+              <h4 class="card-text" id="green">Python, C, C#, Java</h4>
             </div>
           </div>
         </div>
