--- a/server/views/about.ejs
+++ b/server/views/about.ejs
@@ -4,8 +4,9 @@
 
   <!-- Main Content: About Me page -->
 <main >
-    <%- include partials/content.ejs %>    
-    <br><br><br><br><br><br><h1 class="fw-bold" id="lgreen"> About Me</h1><br><br><br>
+    <%- include partials/content.ejs %>
+    <div class="container2">    
+        <br><br><br><br><br><br><h1 class="fw-bold" id="lgreen"> About Me</h1><br><br><br>
         <img src="/Assets/images/scan2.jpg" alt="myPicture" class="rounded float-start" width="20%" hspace="30">
         <h3 id="introduce">Hi, I'm Gaeun Kim. I am from South Korea and now in Software Engineering Technology - Artificial Intelligence at Centennial College.
             I'm 19 years old, and I decidecd to study abroad in Canada right after graduating highschool to gain various experiences and more knowledge.
