--- a/server/views/projects.ejs
+++ b/server/views/projects.ejs
@@ -5,6 +5,7 @@
   <!-- Main Content: Project page -->
   <main >
     <%- include partials/content.ejs %>
+    <div class="container2">
         <!--First Project: Bug Smasher-->
         <div>
             <img src="/Assets/images/pj1.png" alt="project1" class="rounded float-start" width="40%" hspace="30">
