Modify project page

--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -9,8 +9,9 @@
         <!--My Personal Info-->
         <img src="/Assets/images/contact.png" alt="contact" width="100px"><br><br><br><br>
         <h3>Gaeun Kim</h3>
-        <h3><a href="mailto:gkim57@my.centennialcollege.ca">Email: gkim57@my.centennialcollege.ca</a></h3>
         <h3>Phone Number: (416) - 896 - 2757</h3>
+        <h3>Email: <a href="mailto:gkim57@my.centennialcollege.ca">gkim57@my.centennialcollege.ca</a></h3>        
+        <h3>Github: <a href="https://github.com/rlarkdms1118?tab=repositories">https://github.com/rlarkdms1118?tab=repositories</a></h3>
     </div>
 </main>
 
