--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -116,6 +116,12 @@ section {
     z-index: 100;
 }
 
-::content{
-    padding-top: 70px;
+#list-tab > a > img{
+    width: 200px;
+    height: 120px;
+}
+#nav-tabContent > div{
+    text-align: left;
+    font-size: large;
+    
 }
