--- a/server/views/projects.ejs
+++ b/server/views/projects.ejs
@@ -6,32 +6,27 @@
   <main >
     <%- include partials/content.ejs %>
     <div class="container2">
-        <!--First Project: Bug Smasher-->
-        <div>
-            <img src="/Assets/images/pj1.png" alt="project1" class="rounded float-start" width="40%" hspace="30">
-            <h1 id="lgreen"> Bug Smasher</h1>
-        <h3 id="introduce"> This is a game where you click on a bug to get a point. I worked on this project using JavaScript, html, and css. 
-            When a click event occurs on a bug object, I coded it by randomly moving the bug's location and getting one point at the same time.
-        </h3>
-        </div><br><br><br><br><br>
-        <!--Second Project: Photo Gallery-->
-        <div>
-            <img src="/Assets/images/pj2.png" alt="project2" class="rounded float-end" width="40%" hspace="30">
-            <h1 id="lgreen"> Photo Gallery</h1>
-        <h3 id="introduce"> This is a photo gallery that shows various picture automatically. I worked on this project using JavaScript, html, and css. 
-            I coded the photo to change automatically without clicking, and I made the enlarged photo appear when the photo is clicked. 
-            I also created a function to add the picture to favourites list.
-        </h3>
-        </div><br><br><br><br><br>
-        <!--Third Project: Real Estate Agent Website-->
-        <div>
-            <img src="/Assets/images/pj3.png" alt="project3" class="rounded float-start" width="25%" hspace="30">
-            <h1 id="lgreen"> Real Estate Agent Website</h1>
-        <h3 id="introduce"> This is the website of real estate agent. I worked on this project using html and css. 
-            I created 7 pages: Homepage, 3 properties listing pages, available properties for sale page, contact, and sitemap and credits page.
-            I made all the pages have a common feeling and tried to communicate information effectively.
-        </h3>
-        </div>
+        <div class="row">
+            <div class="col-4">
+              <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action" data-bs-toggle="list" href="#project1" role="tab"><img src="/Assets/images/pj1.png" alt="project1"></a>
+                <a class="list-group-item list-group-item-action" data-bs-toggle="list" href="#project2" role="tab"><img src="/Assets/images/pj2.png" alt="project2"></a>
+                <a class="list-group-item list-group-item-action" data-bs-toggle="list" href="#project3" role="tab"><img src="/Assets/images/pj3.png" alt="project3"></a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade" id="project1" role="tabpanel" aria-labelledby="list-home-list"><h4>This is a game where you click on a bug to get a point. I worked on this project using JavaScript, html, and css. 
+                    When a click event occurs on a bug object, I coded it by randomly moving the bug's location and getting one point at the same time.</h4></div>
+                <div class="tab-pane fade" id="project2" role="tabpanel" aria-labelledby="list-profile-list"><h4>This is a photo gallery that shows various picture automatically. I worked on this project using JavaScript, html, and css. 
+                    I coded the photo to change automatically without clicking, and I made the enlarged photo appear when the photo is clicked. 
+                    I also created a function to add the picture to favourites list.</h4></div>
+                <div class="tab-pane fade" id="project3" role="tabpanel" aria-labelledby="list-messages-list"><h4>This is the website of real estate agent. I worked on this project using html and css. 
+                    I created 7 pages: Homepage, 3 properties listing pages, available properties for sale page, contact, and sitemap and credits page.
+                    I made all the pages have a common feeling and tried to communicate information effectively.</h4></div>
+              </div>
+            </div>
+          </div>
     </div>
 </main>
 
