--- a/server/views/services.ejs
+++ b/server/views/services.ejs
@@ -6,28 +6,16 @@
   <main >
     <%- include partials/content.ejs %>
     <div class="container2">
-      <div class="row">
-        <!--Service card 1: Software development-->
-        <div class="col-sm-6">
-          <div class="card" style="border: none;">
-            <div class="card-body">
-              <h1 class="card-title"><br><img src="/Assets/images/software.png" alt="software"></h1><br><br><br>
-              <h1 class="card-text" id="lgreen">Software Development</h1>
-              <h4 class="card-text" id="green">Python, C, C#, Java</h4>
-            </div>
-          </div>
+        <div style="float: left; padding-bottom: 100px;">
+              <h1><br><img src="/Assets/images/software.png" alt="software"></h1><br><br>
+              <h1 id="lgreen">Software Development</h1>
+              <h4 id="green">Python, C, C#, Java</h4>
         </div>
-        <!--Service card 2: Web development-->
-        <div class="col-sm-6">
-          <div class="card" style="border: none;">
-            <div class="card-body">
-              <h1 class="card-title"><br><img src="/Assets/images/web.png" alt="web"></h1><br><br><br>
-              <h1 class="card-text" id="lgreen">Web Development</h1>
-              <h4 class="card-text" id="green">NodeJS, HTML, CSS, ExpressJS</h4>
-            </div>
-          </div>
+        <div style="float: right; padding-bottom: 100px;">
+              <h1><br><img src="/Assets/images/web.png" alt="web"></h1><br><br>
+              <h1 id="lgreen">Web Development</h1>
+              <h4 id="green">NodeJS, HTML, CSS, ExpressJS</h4>
         </div>
-      </div>
     </div>
   </main>
 
