modify github address

--- a/server/views/about.ejs
+++ b/server/views/about.ejs
@@ -8,9 +8,8 @@
     <div class="container2">    
         <br><br><br><br><br><br><h1 class="fw-bold" id="lgreen"> About Me</h1><br><br><br>
         <img src="/Assets/images/scan2.jpg" alt="myPicture" class="rounded float-start" width="20%" hspace="30">
-        <h3 id="introduce">Hi, I'm Gaeun Kim. I am from South Korea and now in Software Engineering Technology - Artificial Intelligence at Centennial College.
-            I'm 20 years old, and I decidecd to study abroad in Canada right after graduating highschool to gain various experiences and more knowledge.
-            I enjoy walking, watching movies and gaming. <br><br><br>
+        <h3 id="introduce">Hi, I'm Gaeun Kim. I am in Software Engineering Technology - Artificial Intelligence at Centennial College.
+            <br><br><br>
             I have always been interested in artificial intelligence. 
             I enjoy studying how far they have developed and what they function. 
             My goal is to study and develop artificial intelligence that can help people.
