--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -11,7 +11,7 @@
         <h3>Gaeun Kim</h3>
         <h3>Phone Number: (416) - 896 - 2757</h3>
         <h3>Email: <a href="mailto:gkim57@my.centennialcollege.ca">gkim57@my.centennialcollege.ca</a></h3>        
-        <h3>Github: <a href="https://github.com/rlarkdms1118?tab=repositories">https://github.com/rlarkdms1118?tab=repositories</a></h3>
+        <h3>Github: <a href="https://github.com/GE3425">https://github.com/GE3425</a></h3>
     </div>
 </main>
 
