--- a/server/views/projects.ejs
+++ b/server/views/projects.ejs
@@ -12,6 +12,7 @@
                 <a class="list-group-item list-group-item-action" data-bs-toggle="list" href="#project1" role="tab"><img src="/Assets/images/pj1.png" alt="project1"></a>
                 <a class="list-group-item list-group-item-action" data-bs-toggle="list" href="#project2" role="tab"><img src="/Assets/images/pj2.png" alt="project2"></a>
                 <a class="list-group-item list-group-item-action" data-bs-toggle="list" href="#project3" role="tab"><img src="/Assets/images/pj3.png" alt="project3"></a>
+                <a class="list-group-item list-group-item-action" data-bs-toggle="list" href="#project4" role="tab"><img src="/Assets/images/pj4.png" alt="project3"></a>
               </div>
             </div>
             <div class="col-8">
@@ -24,6 +25,9 @@
                 <div class="tab-pane fade" id="project3" role="tabpanel" aria-labelledby="list-messages-list"><h4>This is the website of real estate agent. I worked on this project using html and css. 
                     I created 7 pages: Homepage, 3 properties listing pages, available properties for sale page, contact, and sitemap and credits page.
                     I made all the pages have a common feeling and tried to communicate information effectively.</h4></div>
+                <div class="tab-pane fade" id="project4" role="tabpanel" aria-labelledby="list-messages-list"><h4>This is the project that create the spam classifer using NPL technology. 
+                    I worked on this project using Python, to handle the numerous comments data with Count Vectorization, tf-idf transformation, and Naive Bayes Classifier.<br><br><br>
+                    Github link for code: <a href="https://github.com/GE3425">https://github.com/GE3425</a></h4></div>
               </div>
             </div>
           </div>
